Fix active cursor alignment, fade over crawl text

--- a/src/components/Landing/_landing.scss
+++ b/src/components/Landing/_landing.scss
@@ -82,7 +82,7 @@ body {
   font-family: 'Pathway Gothic One', sans-serif;
   font-size: 3em;
   position: relative;
-  top: 240px;
+  top: 232px;
   text-shadow: 1px 1px 1px white;
   height: 80px;
   transition: all .4s;
@@ -152,7 +152,7 @@ body {
   height: 550px;
   position: absolute;
   top: -20px;
-  background-image: linear-gradient(black 2%, rgba(0, 0, 0, 0) 98%);
+  background-image: linear-gradient(black 5%, rgba(0, 0, 0, 0) 40%);
   width: 100%;
   z-index: 1;
 }
